# sbd

./: .gitattributes  .gitignore  .travis.yml  Makefile.am  Moving_to_pipelines.txt  README.md  VMware-GuestSDK.spec  VMware_GuestSDK.spec  autogen.sh  configure.ac  sbd.pc.in  sbd.spec
.copr/: Makefile
agent/: sbd  sbd.in
man/: Makefile.am  sbd.8.pod  sbd.8.pod.in
src/: Makefile.am  sbd-cluster.c  sbd-common.c  sbd-inquisitor.c  sbd-md.c  sbd-pacemaker.c  sbd-watchdog.c  sbd.h  sbd.service  sbd.service.in  sbd.sh  sbd.sh.in  sbd.sysconfig  sbd.sysconfig.in  sbd_helper.in  sbd_remote.service.in  sbd_remote_helper.in  setproctitle.c
tests/: Makefile.am  configure.ac  regressions.sh  sbd-fakeaio.c  sbd-fakeblock.c  sbd-testbed.c
